--- a/PM-Movies/src/app/components/content-thumbnail/content-thumbnail.component.html
+++ b/PM-Movies/src/app/components/content-thumbnail/content-thumbnail.component.html
@@ -1,12 +1,11 @@
 <div class="content-thumbnail">
   <div class="card">
-    <div class="card-img-top">
+    <div class="card-img-top" [class.empty]="!content.posterUrl">
       <img class="content-poster" src="{{ content.posterUrl || '' }}" alt="Content poster unavailable" />
-      <p class="content-title">{{ content.title }}</p>
     </div>
     <div class="card-body" routerLink="/detail/{{content.type}}/{{content.tmdbId}}">
-      <p class="content-overview">{{ content.overview | slice:0:250 }}...</p>
-      <div class="action-bar">
+      <p class="card-text" title="{{content.overview}}">{{ content.overview | slice:0:250 }}...</p>
+      <div class="btn-toolbar">
         <button type="button" [class.btn-primary]="content.toWatch" [class.btn-outline-primary]="!content.toWatch"
           class="btn" [class.enabled]="content.toWatch" (click)="toggleWatchList($event)">A voir
         </button>
@@ -14,6 +13,7 @@
           class="btn" [class.enabled]="content.watched" (click)="addToWatchedContents($event)">Déja vu
         </button>
       </div>
+      <h2 class="card-title">{{ content.title }}</h2>
     </div>
   </div>
   <div *ngIf="content.releaseDate" class="content-year">Released on
