--- a/PM-Movies/src/assets/stylesheets/components/_thumbnail-board.scss
+++ b/PM-Movies/src/assets/stylesheets/components/_thumbnail-board.scss
@@ -3,7 +3,7 @@ app-thumbnail-board {
   .thumbnail-board-container{
     margin-left: auto;
     margin-left: auto;
-    min-height: 80vh;
+    min-height: 60vh;
   }
 
   .thumbnail-board-empty-msg{
@@ -11,5 +11,10 @@ app-thumbnail-board {
     color: lighten($base-color,70);
     font-weight: $weight-bold;
     font-size: $size-xxlarge;
+  }
+
+  app-content-thumbnail{
+    margin: $spacing-none $spacing-xlarge $spacing-xlarge $spacing-xlarge;
+    display: flex;
   }
 }
