--- a/PM-Movies/src/assets/stylesheets/variables/_sizes.scss
+++ b/PM-Movies/src/assets/stylesheets/variables/_sizes.scss
@@ -34,5 +34,6 @@ $sidebar-collapsed-size: 5rem;
 //Cards width
 $card-size: 18rem;
 
-//Header height
+//Header & footer height
 $header-height: 5rem;
+$footer-height: 5rem;
