--- a/PM-Movies/src/app/components/content-thumbnail/content-thumbnail.component.scss
+++ b/PM-Movies/src/app/components/content-thumbnail/content-thumbnail.component.scss
@@ -4,7 +4,7 @@
   align-items: center;
 }
 
-.card:hover .card-body {
+.card-body{
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
