--- a/PM-Movies/src/assets/stylesheets/components/_content-thumbnail.scss
+++ b/PM-Movies/src/assets/stylesheets/components/_content-thumbnail.scss
@@ -1,7 +1,7 @@
 app-content-thumbnail {
   .card {
     position: relative;
-    margin-bottom: $spacing-medium;
+    margin-bottom: $spacing-none;
     margin-left: $spacing-xxlarge;
     margin-right: $spacing-xxlarge;
     width: $card-size;
@@ -9,53 +9,83 @@ app-content-thumbnail {
     box-shadow: $shadow-medium-3;
     border-radius: $card-top-left-border-radius $card-top-right-border-radius $card-bottom-left-border-radius
       $card-bottom-right-border-radius;
+
+    &:hover {
+      .card-img-top::before {
+        background: rgba($contrast-bg-color, 0.825);
+      }
+
+      .card-text,
+      .btn-toolbar {
+        visibility: visible;
+      }
+    }
   }
 
   .card-body {
-    position: absolute;
-    display: none;
-    height: 80%;
+    position: relative;
+    height: 100%;
     width: 100%;
-    background: linear-gradient(0deg, rgba(0, 0, 0, 0.9) 100%, rgba(0, 0, 0, 1) 34%);
     font-family: "Fira Sans", sans-serif;
     font-size: $size-medium;
     color: $contrast-color;
-    padding: $spacing-none;
-    padding-bottom: $spacing-medium;
+    padding: $spacing-medium;
     cursor: pointer;
   }
 
-  .content-overview {
+  .card-text {
     font-size: $size-small;
     text-align: left;
-    margin: $spacing-large;
+    margin: 0 0 $spacing-large;
+    visibility: hidden;
   }
 
   .card-img-top {
-    position: relative;
+    position: absolute;
     background-color: lighten($base-bg-color, 15);
     color: $contrast-color;
     font-size: $size-medium;
     width: 100%;
     height: $card-size;
     text-align: center;
+
+    &::before {
+      top: 0;
+      left: 0;
+      height: 100%;
+      width: 100%;
+      position: absolute;
+      content: "";
+      background: $card-backdrop-gradient;
+    }
+
+    &.empty::before {
+      top: 0;
+      left: 0;
+      height: 100%;
+      width: 100%;
+      position: absolute;
+      content: "";
+      background: lighten($contrast-bg-color, 15);
+    }
   }
 
-  .content-title {
+  .card-title {
     font-weight: $weight-bold;
-    padding: $spacing-medium;
-    margin-bottom: $spacing-none;
-    background: linear-gradient(0deg, #000000 6%, rgba(0, 0, 0, 0) 50%);
-    position: absolute;
-    bottom: 0;
+    padding: $spacing-none;
+    margin: $spacing-medium $spacing-none $spacing-none $spacing-none;
     text-align: left;
+    font-size: $size-medium;
   }
 
-  .action-bar {
+  .btn-toolbar {
     color: $base-bg-color;
-    height: 3rem;
-    width: 12rem;
     align-items: center;
+    visibility: hidden;
+
+    .btn:not(:last-child) {
+      margin-right: $spacing-medium;
+    }
   }
 
   .content-poster {
