--- a/PM-Movies/src/assets/stylesheets/components/_content-detail.scss
+++ b/PM-Movies/src/assets/stylesheets/components/_content-detail.scss
@@ -1,12 +1,18 @@
 app-content-detail {
   .detail-container {
+    position: relative;
     margin-top: $spacing-xxlarge * 6;
   }
 
   .detail-section {
     padding: $spacing-medium;
-    padding-left: $spacing-xxlarge * 4;
-    margin-bottom: $spacing-xxlarge;
+    padding-left: $spacing-xxlarge*8;
+    color: lighten($base-color, 30);
+
+    @media (max-width: map-get($breakpoints, "large")){
+      padding-left: $spacing-xxlarge;
+      padding-right: $spacing-xxlarge;
+    }
   }
 
   .detail-section-title {
@@ -56,10 +62,51 @@ app-content-detail {
     margin-left: $spacing-xxsmall;
   }
 
-  .content-poster {
-    width: 20rem;
-    position: absolute;
-    right: 10rem;
+  .content-img-group-top {
+    height: 30rem;
+    margin: $spacing-xxlarge auto;
+
+    @media (min-width: map-get($breakpoints, "xlarge")) {
+      position: absolute;
+      top: -6rem;
+      right: 5rem;
+    }
+
+    @media (max-width: map-get($breakpoints, "xlarge")) {
+      height: auto;
+      justify-content: center;
+
+      .content-img-right-bottom {
+        margin-left: $spacing-none;
+        margin-top: $spacing-large;
+      }
+    }
+  }
+
+  .content-img {
+    @include contentImgSmallAspectRatio;
+    position: relative;
+    object-fit: cover;
+
+    &.empty::before {
+      @include contentImgSmallAspectRatio;
+      display: block;
+      position: absolute;
+      top: 0;
+      left: 0;
+      background-color: $accent-bg-color;
+      content: "";
+    }
+  }
+
+  .content-img-right-bottom {
+    margin-left: -10rem;
+    z-index: 0;
+  }
+
+  .content-img-left-top {
+    object-position: 50% 0;
+    z-index: 1;
   }
 
   .content-origin-country-list {
@@ -81,19 +128,13 @@ app-content-detail {
   }
 
   .synopsis {
-    width: 50vw;
-    max-width: 50rem;
-  }
-
-  .cast-list {
-    display: flex;
-    flex-wrap: wrap;
+    max-width: 60rem;
+    font-size: $size-medium;
+    margin-top: $spacing-xxlarge;
   }
 
   .cast {
-    display: flex;
     width: 30rem;
-    align-items: center;
     padding: $spacing-medium;
     padding-left: $spacing-none;
   }
@@ -108,7 +149,6 @@ app-content-detail {
     height: 5rem;
     border-radius: 3rem;
     overflow: hidden;
-    display: block;
 
     &.broken:after {
       position: absolute;
@@ -126,6 +166,43 @@ app-content-detail {
 
   .cast-name {
     font-weight: $weight-bold;
-    font-size: $size-large;
+    font-size: $size-medium;
+  }
+
+  .cast-role,
+  .cast-biography {
+    margin-bottom: $spacing-none;
+  }
+
+  .cast-role {
+    font-size: $size-medium;
+  }
+
+  .cast-biography {
+    font-size: $size-small;
+  }
+
+  .content-img-group-bottom {
+    height: $content-img-group-height * $grow-factor*0.80;
+    margin: $spacing-xxlarge auto;
+
+    .content-img{
+      @include contentImgHugeAspectRatio;
+    }
+
+    @media (max-width: map-get($breakpoints, "xlarge")) {
+      flex-direction: column;
+      height: auto;
+
+      .content-img{
+        align-self: center;
+        width: 80vw;
+        min-width: 80vw;
+        height: 50vw;
+        min-height: 50vw;
+        margin: $spacing-none;
+        margin-bottom: $spacing-medium;
+      }
+    }
   }
 }
