fix(ui): improved missing content backdrop handling

--- a/PM-Movies/src/app/components/content-detail/content-detail.component.html
+++ b/PM-Movies/src/app/components/content-detail/content-detail.component.html
@@ -57,8 +57,8 @@
   </section>
 
   <div class="content-img-group-top">
-    <img class="content-img content-img-left-top" src="{{ getBackdropImg(0) }}" [class.empty]="(content.posterUrl.includes('null'))" alt="content poster" />
-    <img class="content-img empty content-img-right-bottom" src="{{ getBackdropImg(1) }}" [class.empty]="true" alt="content poster" />
+    <img class="content-img content-img-left-top" src="{{ getBackdropImg(0) }}" alt="content poster" />
+    <img class="content-img empty content-img-right-bottom" src="{{ getBackdropImg(1) }}" alt="content poster" />
   </div>
 
   <section class="detail-section synopsis">
@@ -86,7 +86,7 @@
   </section>
 
   <div class="content-img-group-bottom">
-    <img class="content-img content-img-left-top" src="{{ getBackdropImg(2) }}" [class.empty]="(content.posterUrl.includes('null'))" alt="content poster" />
-    <img class="content-img empty content-img-right-bottom" src="{{ getBackdropImg(3) }}" [class.empty]="true" alt="content poster" />
+    <img class="content-img content-img-left-top" src="{{ getBackdropImg(2) }}" alt="content poster" />
+    <img class="content-img empty content-img-right-bottom" src="{{ getBackdropImg(3) }}" alt="content poster" />
   </div>
 </div>
