--- a/PM-Movies/src/assets/stylesheets/components/_content-detail.scss
+++ b/PM-Movies/src/assets/stylesheets/components/_content-detail.scss
@@ -88,8 +88,9 @@ app-content-detail {
     position: relative;
     object-fit: cover;
 
-    &.empty::before {
-      @include contentImgSmallAspectRatio;
+    &::before {
+      width: 100%;
+      height: 100%;
       display: block;
       position: absolute;
       top: 0;
