--- a/PM-Movies/src/app/components/content-filters-panel/content-filters-panel.component.scss
+++ b/PM-Movies/src/app/components/content-filters-panel/content-filters-panel.component.scss
@@ -8,6 +8,14 @@
   }
 }
 
+.filters-panel-header-title{
+  display: none;
+
+  &.expanded{
+    display: flex;
+  }
+}
+
 .filter {
   display: flex;
   justify-content: space-between;
