--- a/PM-Movies/src/app/components/content-filters-panel/content-filters-panel.component.html
+++ b/PM-Movies/src/app/components/content-filters-panel/content-filters-panel.component.html
@@ -2,6 +2,7 @@
 <div class="filters-panel-fixed-container" >
   <div class="filters-panel-header" [class.expanded]="!hidden" (click)="hidden=!hidden">
     <img src="/assets/icons/filter.svg" alt="filter icon" class="filters-panel-header-icon" />
+    <h2 class="filters-panel-header-title" [class.expanded]="!hidden">Filters</h2>
     <img *ngIf="!hidden" src="/assets/icons/close.svg" alt="Close filter panel" class="filters-panel-header-icon"/>
   </div>
 
