--- a/PM-Movies/src/app/components/thumbnail-board/thumbnail-board.component.html
+++ b/PM-Movies/src/app/components/thumbnail-board/thumbnail-board.component.html
@@ -1,10 +1,11 @@
 <div class="thumbnail-board-container">
   <app-content-filters-panel></app-content-filters-panel>
-
-  <div class="thumbnail-board-thumbnails" [class.empty]="!contents.length">
-    <div *ngFor="let content of contents">
-      <app-content-thumbnail *ngIf="content.visible" [content]="content"></app-content-thumbnail>
+  <div class="thumbnail-board-sub-container">
+    <div class="thumbnail-board-thumbnails" [class.empty]="!contents.length">
+      <div *ngFor="let content of contents">
+        <app-content-thumbnail *ngIf="content.visible" [content]="content"></app-content-thumbnail>
+      </div>
+      <p *ngIf="!contents.length" class="thumbnail-board-empty-msg">No content to display</p>
     </div>
-    <p *ngIf="!contents.length" class="thumbnail-board-empty-msg">No content to display</p>
   </div>
 </div>
