--- a/PM-Movies/src/app/components/thumbnail-board/thumbnail-board.component.scss
+++ b/PM-Movies/src/app/components/thumbnail-board/thumbnail-board.component.scss
@@ -3,6 +3,11 @@
   justify-content: space-between;
 }
 
+.thumbnail-board-sub-container{
+  display: flex;
+  justify-content: center;
+}
+
 .thumbnail-board-thumbnails{
   display: flex;
   flex-wrap: wrap;
