--- a/PM-Movies/src/assets/stylesheets/variables/_sizes.scss
+++ b/PM-Movies/src/assets/stylesheets/variables/_sizes.scss
@@ -18,7 +18,7 @@ $input-size-small: 0.85rem;
 $input-size-medium: 1rem;
 $input-size-large: 1.14rem;
 $input-size-xlarge: 1.35rem;
-$input-size-xxlarge: 4rem;
+$input-size-xxlarge: 2.5rem;
 
 //Responsive breakpoints
 $breakpoints: (
@@ -43,6 +43,7 @@ $footer-height: 5rem;
 $content-img-width: 28rem;
 $content-img-heigth: 20rem;
 $content-img-group-height: 30rem;
+$content-img-group-bottom-height: 55rem;
 $grow-factor: 2;
 
 @mixin contentImgSmallAspectRatio() {
@@ -53,8 +54,5 @@ $grow-factor: 2;
 }
 
 @mixin contentImgHugeAspectRatio() {
-  width: $content-img-width*$grow-factor;
-  min-width: $content-img-width*$grow-factor;
-  height: $content-img-heigth*$grow-factor;
-  min-height: $content-img-heigth*$grow-factor;
+  height: 40vw;
 }
