feat(general): added integration specs for Content Thumbnail component

--- a/PM-Movies/src/assets/stylesheets/components/_content-thumbnail.scss
+++ b/PM-Movies/src/assets/stylesheets/components/_content-thumbnail.scss
@@ -130,12 +130,12 @@ app-content-thumbnail {
     }
   }
 
-  .content-year {
+  .content-release-date {
     padding: $spacing-medium;
     align-self: flex-start;
   }
 
-  .content-year-val {
+  .content-release-date-val {
     font-weight: $weight-bold;
   }
 }
