feat(code): added integration specs for header component
wip

--- a/PM-Movies/src/app/components/header/header.component.html
+++ b/PM-Movies/src/app/components/header/header.component.html
@@ -1,6 +1,8 @@
 <header>
   <div class="header-title">
-    <img routerLink="/" src="/assets/icons/logo.svg" alt="logo" class="header-title-logo" />
+    <a routerLink="/" class="logo-wrapper">
+      <img src="/assets/icons/logo.svg" alt="logo" class="header-title-logo" />
+    </a>
     <h1 id="title" class="header-title-text">
       <a class="header-title-link" routerLink="/">The Perfect Movie</a>
     </h1>
