feat(code): added integration specs for app component

--- a/PM-Movies/src/app/components/app/app.component.html
+++ b/PM-Movies/src/app/components/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="app-root-container">
-  <app-header (queryUpdate)="onSearchQueryUpdate($event)"></app-header>
+  <app-header></app-header>
   <router-outlet></router-outlet>
 
   <footer class="app-footer">
