fix(ui): removed text underline on content thumbnail hover

--- a/PM-Movies/src/assets/stylesheets/components/_content-thumbnail.scss
+++ b/PM-Movies/src/assets/stylesheets/components/_content-thumbnail.scss
@@ -27,6 +27,10 @@ app-content-thumbnail {
     color: $contrast-color;
     padding: $spacing-medium;
     cursor: pointer;
+
+    &:hover {
+      text-decoration: none;
+    }
   }
 
   .card-text {
