--- a/PM-Movies/src/app/components/content-detail/content-detail.component.scss
+++ b/PM-Movies/src/app/components/content-detail/content-detail.component.scss
@@ -60,7 +60,8 @@
 .content-img-group-bottom {
   width: 100%;
 
-  .content-img-left-top, .content-img-right-bottom{
+  .content-img-left-top,
+  .content-img-right-bottom {
     flex-grow: 1;
   }
 
@@ -71,4 +72,11 @@
   .content-img-right-bottom {
     align-self: flex-start;
   }
+}
+
+.missing-details {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
 }
