feat(code): added marked content and filters conservation e2e specs

--- a/PM-Movies/src/app/components/content-detail/content-detail.component.html
+++ b/PM-Movies/src/app/components/content-detail/content-detail.component.html
@@ -1,5 +1,5 @@
-<div class="detail-container">
-  <div *ngIf="content; else missingDetails">
+<div class="detail-container-wrapper">
+  <div *ngIf="content; else missingDetails" class="detail-container">
     <section class="detail-section detail-jumbotron">
       <div class="detail-jumbotron-content">
         <h1 class="jumbotron-title">{{ content.title }}</h1>
