--- a/PM-Movies/src/app/components/content-detail/content-detail.component.scss
+++ b/PM-Movies/src/app/components/content-detail/content-detail.component.scss
@@ -1,3 +1,9 @@
+.detail-container-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
 .detail-container {
   display: flex;
   flex-direction: column;
@@ -77,6 +83,6 @@
 .missing-details {
   display: flex;
   justify-content: center;
+  align-items: center;
   width: 100%;
-  height: 100%;
 }
